--- a/ReadMe
+++ b/ReadMe
@@ -1,6 +1,6 @@
 # Mvvm 和 组件化
 
-> https://blog.csdn.net/c10wtiybq1ye3/article/details/85241704
+> https://github.com/goldze/MVVMHabitComponent
 > https://blog.csdn.net/guiying712/article/details/55213884#2%E5%A6%82%E4%BD%95%E7%BB%84%E4%BB%B6%E5%8C%96
 
 > 每一次挑战都能让自己成长,战!
@@ -139,3 +139,7 @@
         todo 待补充
 
     ### 5.组件初始化
+        > 组件在独立运行时，也就是debug期，有单独的manifest，当然也就可以指定Application类进行初始化。
+        那么当组件进行合并的时，Application只能有一个，并且存在宿主App中，组件该如何进行初始化？
+    ### 5.1.反射
+        + 反射是一种解决组件初始化的方法。
